--- a/ebike/package.json
+++ b/ebike/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@node-wot/binding-http": "^0.8.1",
-    "@node-wot/core": "^0.8.1"
+    "@node-wot/core": "^0.8.1",
+    "node-schedule": "^2.1.0"
   }
 }
